--- a/src/content/docs/book/part-1-instructions/2-data/4-activities/03-1-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/4-activities/03-1-calculator.mdx
@@ -28,5 +28,5 @@ Or build a similar terminal based program of your own design. It will need to:
 </NoCopy>
 
 :::caution
-Make sure to only use the things we have covered. Don't worry about formatting the numbers in the output for now, just focus on getting the variables and sequence of method calls right.
+Make sure to only use the things we have covered. Don't worry about formatting the numbers in the output for now, just focus on getting the variables and sequence of procedure/function calls right.
 :::
