--- a/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-00-simple-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-00-simple-calculator.mdx
@@ -25,3 +25,5 @@ You will take another 77.134615384615385 minutes before you arrive
 Total distance will be 62.5 km
 Total time will be 84.1346153846 minutes
 ```
+
+Before we get started, let's take a look at the procedures and functions we can use to interact with the terminal.
