--- a/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-03-distance-time.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-03-distance-time.mdx
@@ -26,7 +26,7 @@ How long has it taken? Enter minutes: 7
 
 2. Add the code to read these values in from the user.
 
-    Now, we have a problem - you cannot store the result of calling `read_line` into a `int` or a `double`. How can we get this to work? There isn't *one* method we can use to here, so we have to think about using what we have. If you look back at the [terminal methods](/book/part-1-instructions/1-sequence/0-panorama/6-terminal-method-to-use) you will see there is a `to_integer` and a `to_double` method. These convert strings to numeric values. We could read the text from the user into a string, and then convert that and store the result in our variables.
+    Now, we have a problem - you cannot store the result of calling `read_line` into a `int` or a `double`. How can we get this to work? There isn't *one* function we can use to here, so we have to think about using what we have. If you look back at the [terminal procedures/functions](/book/part-1-instructions/2-data/3-guided-tour/01-01-terminal) you will see there is a `to_integer` and a `to_double` function. These convert strings to numeric values. We could read the text from the user into a string, and then convert that and store the result in our variables.
 
     - Add a `user_input` string variable.
     - Output appropriate messages with `write`
