--- a/src/content/docs/book/part-1-instructions/2-data/5-reference/06-type.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/5-reference/06-type.mdx
@@ -33,17 +33,17 @@ With whole numbers, check the range of values that the type can support.
 Different types of real numbers have different level of precision, which results in a trade-off between the range of numbers they can represent and level of precision they can capture -- you will need to consider this.
 With text, you usually use the one data type unless you have a specific requirement for a single character.
 
-## In C#
+## In C++
 
 Types are used to define how data is interpreted and the operations that can be performed on it.
 A data type will have a size in memory and, in the case of numbers, a range of valid values.
 
 ### Text Types
 
-There are two main text types in C#.
+There are two main text types in C++.
 You will use `string` most often, as it describes a sequence of zero or more alphanumeric characters.
 `char`, on the other hand, describes a single alphanumeric character.
-As we learned in [literals](/book/part-1-instructions/1-sequence/2-trailside/05-literal), a literal string value is enclosed in double quotes (`"`), and a character value is enclosed in single quotes (`'`).
+As we learned in [literals](/book/part-1-instructions/1-sequence/5-reference/05-literal), a literal string value is enclosed in double quotes (`"`), and a character value is enclosed in single quotes (`'`).
 This difference in representation helps us to quickly identify what kind of text data a literal value is.
 
 | **Name**  | **Size**                                   |
@@ -61,24 +61,24 @@ This difference in representation helps us to quickly identify what kind of text
 With whole numbers, you have signed and unsigned versions of the types.
 Signed numbers can be positive or negative, whereas unsigned numbers can only be positive.
 
-You can see the main options for whole number data types in C# in the table below.
+You can see the main options for whole number data types in C++ in the table below.
 Typically you will use `int` unless you have a specific reason not to.
 
 | <div style="width:120px">**Name**</div> | **Size** | **Range (lowest .. highest)** |
-|---------- |--------------------------|---------------------------------------------------------|
-| `byte`    | 1 bytes/8 bits           | 0 .. 255                                                |
-| `short`   | 2 bytes/16 bits          | -32,767 .. 32,767                                       |
-| `int`     | 4 bytes/32 bits          | -2,147,483,648 .. 2,147,483,647                         |
-| `long`    | 8 bytes/64 bits          | -9,223,372,036,854,775,807 .. 9,223,372,036,854,775,807 |
-| `uint`    | 4 bytes/32 bits          | 0 to 4,294,967,295                                      |
-| `ulong`   | 8 bytes/64 bits          | 0 to 18,446,744,073,709,551,615                         |
+|------------------ |--------------------------|---------------------------------------------------------|
+| `byte`            | 1 bytes/8 bits           | 0 .. 255                                                |
+| `short`           | 2 bytes/16 bits          | -32,767 .. 32,767                                       |
+| `int`             | 4 bytes/32 bits          | -2,147,483,648 .. 2,147,483,647                         |
+| `long`            | 8 bytes/64 bits          | -9,223,372,036,854,775,807 .. 9,223,372,036,854,775,807 |
+| `unsigned int`    | 4 bytes/32 bits          | 0 to 4,294,967,295                                      |
+| `unsigned long`   | 8 bytes/64 bits          | 0 to 18,446,744,073,709,551,615                         |
 
 ### Real Number Types
 
 With real numbers, the precision of a type is defined as the number of **significant digits** it can support.
 This is the number of digits the type can support, excluding leading zeros and zeros after the decimal point but before the first non-zero digit (e.g., the number 0.00298008 has 6 significant digits).
 
-One factor to consider when you are using real numbers is that the way they are stored in memory means that you can only represent close approximations of any odd value.
+One factor to consider when you are using real numbers is that the way they are stored in memory means that you can only represent close approximations of any fractional value.
 An important consequence of this is that rounding errors can accumulate over time.
 
 | **Name** | **Size**        | **Range (lowest .. highest)**                       | **Significant Digits** |
@@ -88,7 +88,7 @@ An important consequence of this is that rounding errors can accumulate over tim
 
 :::note[Why aren't real numbers accurate?]
 If you're interested in the details of why computers can't accurately represent every number, have a look at [this resource](https://docs.python.org/3/tutorial/floatingpoint.html).
-It is written by the python language developers, but the overall explanation applies to C# as well.
+It is written by the python language developers, but the overall explanation applies to C++ as well.
 
 If you're not interested, don't worry!
 You don't have to understand this to continue on your journey.
@@ -96,9 +96,9 @@ The only important thing to remember is that not every floating point number can
 :::
 
 :::tip[Syntax]
-By default, numeric literals will be either `int` or `double`. For other types, C# provides suffix syntax for literals of specific types.
+By default, numeric literals will be either `int` or `double`. For other types, C++ provides suffix syntax for literals of specific types.
 
-![The syntax for literal values of different types in C#.](./images/literal-type.png "The syntax for literal values of different types in C#.")
+![The syntax for literal values of different types in C++.](./images/literal-type.png "The syntax for literal values of different types in C++.")
 <CommmonLink type="syntaxDiagramGuide"/>
 :::
 
@@ -116,17 +116,17 @@ You can use mathematical operators to work with values in your code. The followi
 
 You will occasionally need to convert data between different data types. A common example of this is how we will handle user input. When the user enters data at the terminal it will come into the program as text. So if the user enters 3 and then 2, it will come into the program as "32" - a string. This makes sense as the user can type any characters at the terminal. But what if you want that as an integer?
 
-To help achieve this programming languages provide utility methods that will allow you to convert between different types. In C#, `System.Convert` provides many methods you can use (see details on the [.net site](https://learn.microsoft.com/en-us/dotnet/api/system.convert?view=net-8.0#methods)). The main ones that we will use are:
+To help achieve this programming languages provide utility functions that will allow you to convert between different types. In C++, `#include <string>` provides many functions you can use (see details on [cppreference.com](https://en.cppreference.com/w/cpp/header/string.html#Numeric_conversions)). The main ones that we will use are:
 
-- `ToInt32` - this can convert a `string` to an `int`.
-- `ToDouble` - this can convert a `string` to a `double`.
+- `stoi` - this can convert a `string` to an `int` (**S**tring **to** **I**nt).
+- `stod` - this can convert a `string` to a `double` (**S**tring **to** **D**ouble).
 
-For example, `ToInt32("73")` will give you the integer 73 as its result. Similarly, `ToDouble("73")` would give you the double `73.0`. Note that these will cause the program to crash if the data is not in the right format, we will look later at how to deal with this. For the moment, make sure you enter the data in the expected format.
+For example, `stoi("73")` will give you the integer 73 as its result. Similarly, `stod("73")` would give you the double `73.0`. Note that these will cause the program to crash if the data is not in the right format, we will look later at how to deal with this. For the moment, make sure you enter the data in the expected format.
 
-SplashKit also provides convenient helper methods for this:
+SplashKit also provides convenient helper functions for this:
 
-- [ConvertToInteger](https://splashkit.io/api/utilities/#convert-to-integer) - can be used to convert a string to an integer.
-- [ConvertToDouble](https://splashkit.io/api/utilities/#convert-to-double) - can be used to convert a string to a double.
+- [ToInteger](https://splashkit.io/api/utilities/#to-integer) - can be used to convert a string to an integer.
+- [ToDouble](https://splashkit.io/api/utilities/#to-double) - can be used to convert a string to a double.
 
 For simple conversions, mostly between different number formats, languages usually also provide an alternate option called **type casting**. With this you can ask the language to reinterpret data in a new format. This is achieved by placing the type within brackets (parenthesis) before the value to be converted. For example, `(int)73.5` will give you the integer 70.
 
@@ -168,7 +168,7 @@ Identify the types of the following data. Where more than one type is possible, 
 <details>
   <summary role="button">Answers</summary>
   <ul>
-    <li><strong>1: </strong>This value has an <code>int</code> type in C#. It can be used where an <code>int</code> or <code>short</code> is required, but not where a <code>byte</code> is required.</li>
+    <li><strong>1: </strong>This value has an <code>int</code> type in C++. It can be used where an <code>int</code> or <code>short</code> is required, but not where a <code>byte</code> is required.</li>
     <li><strong>2: </strong>This is an expression that has an <code>int</code> literal and a <code>double</code> literal. It would evaluate to a <code>double</code>.</li>
     <li><strong>3: </strong>This is an <code>int</code> type. It is too large to be a <code>short</code> or <code>byte</code>.</li>
     <li><strong>4: </strong>This is a textual type, in this case a <code>string</code>.</li>
@@ -190,8 +190,10 @@ Identify the types of the following data. Where more than one type is possible, 
 
 :::
 
+<div style="display: none" todo="TODO: Update video? Or just remove?">
 ## Video Overview and Demonstration of Types
 In this video we'll briefly look at what types are with some visual examples, then demonstrate how they behave by stepping through some simple code!
 <div class="not-content">
   <YouTube id="24tac93iRLo" params="fs=1&modestbranding=1&rel=0"/>
+</div>
 </div>
