--- a/src/content/docs/book/part-1-instructions/2-data/5-reference/07-variable.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/5-reference/07-variable.mdx
@@ -16,8 +16,8 @@ Variables are an invaluable tool to help you build digital realities.
 They allow you to capture simple values, associate them with a name -- the variable's **identifier** -- and change the value within your code.
 You can also use the variable to retrieve (i.e., read) the value it contains.
 
-Whenever you have information in your program that you want to be able to change, you create a variable to store it. Every variable has a [data type](/book/part-1-instructions/1-sequence/2-trailside/06-type), which needs to match the kind of data you want to store.
-After you define a variable with an **identifier** and [**data type**](/book/part-1-instructions/1-sequence/2-trailside/06-type), you need to **initialise** it with a starting value.
+Whenever you have information in your program that you want to be able to change, you create a variable to store it. Every variable has a [data type](/book/part-1-instructions/2-data/5-reference/06-type/), which needs to match the kind of data you want to store.
+After you define a variable with an **identifier** and [**data type**](/book/part-1-instructions/2-data/5-reference/06-type/), you need to **initialise** it with a starting value.
 Then, you can then read the current value and store new values in the variable as the program runs and the information the variable represents changes.
 
 ## Constants
@@ -34,27 +34,27 @@ With programming, the biggest challenge is making sure your code is **understand
 
 Another advantage of using a constant is that you can change the value in one place. If you want to change the maximum number of items in your pack from 10 to 42, you change it in one place. Updating the value of the constant means that everywhere that reads it will get the new value.
 
-## In C#
+## In C++
 
 :::tip[Syntax]
-Variables can be declared in C# using the following syntax:
+Variables can be declared in C++ using the following syntax:
 
-![The syntax for variable declarations in C#.](./images/variable-declaration.png "The syntax for variable declarations in C#")
+![The syntax for variable declarations in C++.](./images/variable-declaration.png "The syntax for variable declarations in C++")
 
 The syntax for declaring a constant is very similar:
-![The syntax for constant declarations in C#.](./images/constant-declaration.png "The syntax for constant declarations in C#")
-<div class="caption">The syntax for constant declarations in C#</div><br/>
+![The syntax for constant declarations in C++.](./images/constant-declaration.png "The syntax for constant declarations in C++")
+<div class="caption">The syntax for constant declarations in C++</div><br/>
 <CommmonLink type="syntaxDiagramGuide"/>
 :::
 
-Variable and constant declarations use almost identical syntax in C#. The main difference between a variable and a constant is the `const` keyword at the start of the declaration. If you include `const`, you are creating constants. Without it, you are creating variables.
+Variable and constant declarations use almost identical syntax in C++. The main difference between a variable and a constant is the `const` keyword at the start of the declaration. If you include `const`, you are creating constants. Without it, you are creating variables.
 
-Both variables and constant declarations need to include the [type](/book/part-1-instructions/1-sequence/2-trailside/06-type) of data you want to store.Then, you provide a name (identifier) for the variable or constant.
+Both variables and constant declarations need to include the [type](/book/part-1-instructions/2-data/5-reference/06-type/) of data you want to store.Then, you provide a name (identifier) for the variable or constant.
 A variable can optionally be given a value when it is declared, but a constant must be given a value.
 You can also declare multiple variables or constants in the one line of code, as long as they are of the same data type.
 
 By convention, all constants should have an **UPPERCASE** name. Where the name has multiple words, separate them with underscores (`_`). For example: `MAX_ITEMS`.
-Variables should have a **camelCase** name, where the first letter is lowercase but each new word in the identifier starts with an uppercase character. For example, `bottleVolume`.
+Variables should have a **snake_case** name, where the first letter is lowercase and each new word in the identifier is separated with an underscore character (`_`). For example, `bottle_volume`.
 
 ## Examples
 
@@ -62,36 +62,31 @@ Variables should have a **camelCase** name, where the first letter is lowercase 
 
 In this program, we want to capture the user's name and greet them using it. We need a variable for the name, as it may change each time the program runs. Within the program, the variable will represent the name of the user.
 
-```csharp
-using static SplashKitSDK.SplashKit;
-
-// Create a variable called name
-// it can store a string
-string name;
+```c++
+#include "splashkit.h"
 
 // Create a constant called message
 const string MESSAGE = "Welcome to The Greeting";
 
-// Output the message
-WriteLine(MESSAGE);
-WriteLine();
-WriteLine("What is your name?");
-Write("name: ");
+int main()
+{
+    // Create a variable called name
+    // it can store a string
+    string name;
 
-// Read user input and store it in the name variable
-name = ReadLine();
+    // Output the message
+    write_line(MESSAGE);
+    write_line();
+    write_line("What is your name?");
+    write("name: ");
 
-WriteLine();
-WriteLine("Hello " + name);
+    // Read user input and store it in the name variable
+    name = read_line();
+
+    write_line();
+    write_line("Hello " + name);
+}
 ```
-
-:::tip[Getting a warning about null types?]
-
-When you run this you are likely to get the following message: **warning CS8600: Converting null literal or possible null value to non-nullable type.**
-
-You can ignore this, or better yet edit your .csproj file and change the “Nullable” property to “disable”. This will remove these warnings.
-
-:::
 
 ### Example using multiple variables
 
@@ -100,39 +95,42 @@ The next example will help us calculate the volume of our water bottles, assumin
 - A `PI` constant for the calculation.
 - Numbers for `radius` and `height` which the user will enter.
 - A string `line` to store the text the user enters before we convert it to a number.
-- Numbers for `bottleVolume` and `litres` to store calculated values.
+- Numbers for `bottle_volume` and `litres` to store calculated values.
 
-```csharp
-using static SplashKitSDK.SplashKit;
-using static System.Convert;
+```c++
+#include "splashkit.h"
 
 // Create a const called PI
 const double PI = 3.1415;
 
-// Create variables radius, height, line, bottleVolume, and litres
-double radius, height;
-string line;
-double bottleVolume, litres;
+int main()
+{
 
-WriteLine("Water Bottle Volume");
-WriteLine();
-WriteLine("Enter the radius and height of the bottle in centimetres");
+    // Create variables radius, height, line, bottleVolume, and litres
+    double radius, height;
+    string line;
+    double bottle_volume, litres;
 
-Write("radius: ");
-line = ReadLine();
-radius = ToDouble(line);
+    write_line("Water Bottle Volume");
+    write_line();
+    write_line("Enter the radius and height of the bottle in centimetres");
 
-Write("height: ");
-line = ReadLine();
-height = ToDouble(line);
+    write("radius: ");
+    line = read_line();
+    radius = to_double(line);
 
-bottleVolume = PI * radius * radius * height;
+    write("height: ");
+    line = read_line();
+    height = to_double(line);
 
-litres = bottleVolume / 1000;
+    bottle_volume = PI * radius * radius * height;
 
-WriteLine();
-WriteLine($"Volume { bottleVolume } cm^3");
-WriteLine($"       { litres } litres");
+    litres = bottle_volume / 1000;
+
+    write_line();
+    write_line("Volume " + to_string( bottle_volume ) + " cm^3");
+    write_line("       " + to_string( litres ) + " litres");
+}
 ```
 
 :::tip
@@ -143,45 +141,47 @@ Adding in additional line breaks also helps group the steps in our code to make 
 
 ### Circle Drawing Example
 
-Let's use SplashKit to look how variables can be used in a graphical program. The following program captures a radius for a circle and uses that to draw to the screen. To achieve this we need two variables, `line` and `radius`. We use `ReadLine` to read a `string` from the user, and `ToDouble` to convert the text read into a `double` value. This value is stored in the `radius` variable, which can then be used in the call to `FillRadius`.
+Let's use SplashKit to look how variables can be used in a graphical program. The following program captures a radius for a circle and uses that to draw to the screen. To achieve this we need two variables, `line` and `radius`. We use `read_line` to read a `string` from the user, and `to_double` to convert the text read into a `double` value. This value is stored in the `radius` variable, which can then be used in the call to `fill_radius`.
 
-```csharp
-using static System.Convert;
-using static SplashKitSDK.SplashKit;
+```c++
+#include "splashkit.h"
 
 const double SATURATION = 0.8;
 const double BRIGHTNESS = 0.8;
 
-string line;
-int radius;
-double hue;
+int main()
+{
+    string line;
+    int radius;
+    double hue;
 
-WriteLine("Welcome to Circle Drawer!");
-WriteLine();
-WriteLine("Enter the radius of the circle to draw. (a whole number)");
+    write_line("Welcome to Circle Drawer!");
+    write_line();
+    write_line("Enter the radius of the circle to draw. (a whole number)");
 
-// Read value from the user and convert to double for radius
-Write("Circle radius: ");
-line = ReadLine();
-radius = ToInt32(line);
+    // Read value from the user and convert to double for radius
+    write("Circle radius: ");
+    line = read_line();
+    radius = to_integer(line);
 
-// Read value from the user and convert to double for hue
-WriteLine("What color? Enter hue between 0 to 1");
-Write("Hue: ");
-line = ReadLine();
-hue = ToDouble(line);
+    // Read value from the user and convert to double for hue
+    write_line("What color? Enter hue between 0 to 1");
+    write("Hue: ");
+    line = read_line();
+    hue = to_double(line);
 
-// Draw scene and delay
-OpenWindow("Circle Drawing", 800, 600);
-ClearScreen(ColorWhite());
-FillCircle(HSBColor(hue, SATURATION, BRIGHTNESS), 400, 300, radius);
-RefreshScreen();
-Delay(5000);
+    // Draw scene and delay
+    open_window("Circle Drawing", 800, 600);
+    clear_screen(color_white());
+    fill_circle(h_s_b_color(hue, SATURATION, BRIGHTNESS), 400, 300, radius);
+    refresh_screen();
+    delay(5000);
+}
 ```
 
 ## Activities
 
-For each piece of information, identify whether it would make the most sense to store it in a variable or constant. Then, try writing the C# code to declare that variable or constant. Remember that variables and constants both need an appropriate name and data type, and constants must also be initialised when declared.
+For each piece of information, identify whether it would make the most sense to store it in a variable or constant. Then, try writing the C++ code to declare that variable or constant. Remember that variables and constants both need an appropriate name and data type, and constants must also be initialised when declared.
 
 1. The number of hours in a day.
 2. The amount of water, in litres, left in your water bottle.
@@ -192,12 +192,12 @@ For each piece of information, identify whether it would make the most sense to 
   <summary role="button">Answers</summary>
   There are other acceptable answers for the identifiers.
   The key to a good identifier is that it is short and meaningful.
-  It should also follow the C# conventions, by using all upper case letters with words separated by underscores for constants, and camelCase for variables.
+  It should also follow the C++ conventions, by using all upper case letters with words separated by underscores for constants, and snake_case for variables.
   <ul>
     <li><strong>1: </strong>Constant, because this value will not change. <code>const int HOURS_IN_DAY = 24;</code></li>
-    <li><strong>2: </strong>Variable, because it will change if you drink from or fill up your bottle. <code>double waterLeft;</code></li>
-    <li><strong>3: </strong>Variable, because it will increase as you walk. <code>int metersWalked;</code></li>
-    <li><strong>4: </strong>Variable, because it will change when you see something new. <code>string lastSpeciesSeen;</code></li>
+    <li><strong>2: </strong>Variable, because it will change if you drink from or fill up your bottle. <code>double water_left;</code></li>
+    <li><strong>3: </strong>Variable, because it will increase as you walk. <code>int meters_walked;</code></li>
+    <li><strong>4: </strong>Variable, because it will change when you see something new. <code>string last_species_seen;</code></li>
   </ul>
 </details>
 
@@ -216,9 +216,11 @@ For each piece of information, identify whether it would make the most sense to 
 
 :::
 
+<div style="display: none" todo="TODO: Update video? Or just remove?">
 ## Debugging
 Variables are fundamental and powerful tools in programming, but with that power comes the possibility for new types of bugs to emerge. Let's see how to view and manipulate variables in VS Code's debugger!
 
 <div class="not-content">
   <YouTube id="N_lgAN7lVHM" params="fs=1&modestbranding=1&rel=0"/>
+</div>
 </div>
