More camelCase -> sane_case fixes

--- a/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/03-03-solutions.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/03-03-solutions.mdx
@@ -85,9 +85,9 @@ As with the Airspeed Velocity code, this is our version of the water bottle visu
         |   |    |             |
         |   |    | ___________ |
         |   |    |/           \|
-        |   |    |             | <-- waterY
+        |   |    |             | <-- water_y
         |   |    |\___________/| ^
-        |   |    | ___________ | | waterHeight
+        |   |    | ___________ | | water_height
         |   |    |/           \| v
         |   v    |             | <-- BOTTLE_BASE_Y
         |         \___________/
