--- a/src/content/docs/book/part-1-instructions/2-data/5-reference/07-variable.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/5-reference/07-variable.mdx
@@ -106,7 +106,7 @@ const double PI = 3.1415;
 int main()
 {
 
-    // Create variables radius, height, line, bottleVolume, and litres
+    // Create variables radius, height, line, bottle_volume, and litres
     double radius, height;
     string line;
     double bottle_volume, litres;
