--- a/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-02-read-name.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-02-read-name.mdx
@@ -18,7 +18,7 @@ Hi Andrew.
 
 1. Open a folder in VS Code, and create a new `.cpp` file.
 
-2. Start by adding the [#include directive](/book/part-1-instructions/1-sequence/5-reference/10-library/#in-c) to access the SplashKit library, and an empty [`main` function](/book/part-1-instructions/1-sequence/3-guided-tour/01-01-main-function/).
+2. Start by adding the [#include directive](/book/part-1-instructions/1-sequence/5-reference/10-library/#in-c) to access the SplashKit library, and an empty [`main`](/book/part-1-instructions/1-sequence/3-guided-tour/01-01-main/).
 
     <Accordion>
       <AccordionItem header="Code with #include directive">
@@ -37,7 +37,7 @@ Hi Andrew.
       </AccordionItem>
     </Accordion>
 
-4. As you look at this you, think about whether there are any values that will change. We will need to create [variables](/book/part-1-instructions/2-data/5-reference/07-variable/) to store these.
+3. As you look at this you, think about whether there are any values that will change. We will need to create [variables](/book/part-1-instructions/2-data/5-reference/07-variable/) to store these.
 
     Looking at the first lines, I imagine that we may have different users run this. So their name may change.
 
@@ -45,9 +45,9 @@ Hi Andrew.
     Is this a string, int, or double? String is for text, int whole numbers, and double for real numbers.
     :::
 
-5. Add the code to create a `name` variable - then we can think about how we use this.
+4. Add the code to create a `name` variable - then we can think about how we use this.
 
-6. Review the messages we want to output. To start we want to output the message `"What is your name: "`, read the text and user enters, then output a blank line and the greeting text `"Hi "` followed by the user's name.
+5. Review the messages we want to output. To start we want to output the message `"What is your name: "`, read the text and user enters, then output a blank line and the greeting text `"Hi "` followed by the user's name.
   
     Looking back at the [terminal procedures/functions](/book/part-1-instructions/2-data/3-guided-tour/01-01-terminal), we have procedures to output text (`write` and `write_line`), and functions to read text from the user (`read_line`). Use these to display the prompt, and output the required messages.
 
@@ -72,7 +72,7 @@ Hi Andrew.
       </AccordionItem>
     </Accordion>
 
-7. Now compile and run the program to see the output. Check it against what we were aiming to achieve.
+6. Now compile and run the program to see the output. Check it against what we were aiming to achieve.
 
     :::note
 
