Update images and complete first pass changes on sequence

--- a/src/content/docs/book/part-2-organised-code/1-structuring-code/2-trailside/03-procedure-parameters.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-structuring-code/2-trailside/03-procedure-parameters.mdx
@@ -150,14 +150,9 @@ The C/C++ syntax for a procedure declaration with parameters is shown in the fol
 
 ![C/C++ syntax for a procedure declaration with parameters](./images/procedure-decl-with-params.png "C/C++ Syntax for a procedure declaration with parameters")
 
-For completeness here is the diagram for a function declaration, but it is the same except for the type name at the start instead of `void`:
-
-![C/C++ syntax for a function declaration with parameters](./images/function-decl-with-params.png "C/C++ Syntax for a function declaration with parameters")
-:::
-
-Parameters are an optional addition to any function or procedure declaration.
-The syntax in both cases is the same -- in between the declarations parentheses you write [variable declarations](/book/part-2-organised-code/1-starting-cpp/2-trailside/4-1-variable-constant) (without initialisation), separated by commas.
+Parameters are an optional addition to any procedure declaration -- in between the declarations parentheses you write [variable declarations](/book/part-2-organised-code/1-starting-cpp/2-trailside/4-1-variable-constant) (without initialisation), separated by commas.
 Each variable is a single parameter.
+:::
 
 ## Examples
 
