--- a/src/content/docs/book/part-2-organised-code/1-structuring-code/2-trailside/04-function-decl.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-structuring-code/2-trailside/04-function-decl.mdx
@@ -30,7 +30,7 @@ You can think of procedures as tasks that perform an action, whereas functions a
 :::tip[Syntax]
 The following diagram shows the syntax for a function declaration in C/C++.
 
-![Syntax for a C/C++ function declaration](./images/function-decl.png)
+![Syntax for a C/C++ function declaration](./images/function-decl-with-params.png)
 :::
 
 The syntax for a function declaration is very similar to the [syntax for a procedure declaration](/book/part-2-organised-code/2-organising-code/2-trailside/02-procedures#in-cc).
