Reorganise data page names and update terminal functions

--- a/src/content/docs/book/part-1-instructions/2-data/5-reference/11-assignment-statement.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/5-reference/11-assignment-statement.mdx
@@ -1,5 +1,7 @@
 ---
 title: "Assignment Statement"
+sidebar:
+  label: " - Assignment Statement"
 ---
 
 import CommmonLink from '/src/components/CommonLink.astro'
