--- a/src/content/docs/book/part-1-instructions/2-data/5-reference/20-constant.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/5-reference/20-constant.mdx
@@ -1,5 +1,5 @@
 ---
-title: Variable and Constant
+title: Constant
 ---
 import CommmonLink from '/src/components/CommonLink.astro'
 import { YouTube } from 'astro-embed';
